--- a/Chat-Java/.classpath
+++ b/Chat-Java/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/media/breno/5D05-A5E5/DnaTec - WebCloud/Java/Chat-Java/postgresql-9.3-1102.jdbc41.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
